unpackaged/main/default/objects/CZ_WebHook__e/CZ_WebHook__e.object-meta.xml
<CustomObject>
    <label>CZ_WebHook</label>
    <pluralLabel>CZ_WebHooks</pluralLabel>
</CustomObject>