unpackaged/main/default/objects/CZ_WebHook__e/fields/amount_with_out_surcharge__c.field-meta.xml
<CustomField>
    <fullName>amount_with_out_surcharge__c</fullName>
    <label>amount_with_out_surcharge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>