unpackaged/main/default/objects/CZ_WebHook__e/fields/amount_without_surcharge__c.field-meta.xml
<CustomField>
    <fullName>amount_without_surcharge__c</fullName>
    <label>amount_without_surcharge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>