unpackaged/main/default/objects/CZ_WebHook__e/fields/surcharge_amount_value__c.field-meta.xml
<CustomField>
    <fullName>surcharge_amount_value__c</fullName>
    <label>surcharge_amount_value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>