unpackaged/main/default/objects/CZ_WebHook__e/fields/tnxAmount__c.field-meta.xml
<CustomField>
    <fullName>tnxAmount__c</fullName>
    <label>tnxAmount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>