unpackaged/main/default/objects/CZ_WebHook__e/fields/tnxID__c.field-meta.xml
<CustomField>
    <fullName>tnxID__c</fullName>
    <label>tnxID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>