unpackaged/main/default/objects/CZ_WebHook__e/fields/tnxInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>tnxInvoiceId__c</fullName>
    <label>tnxInvoiceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>