unpackaged/main/default/objects/CZ_WebHook__e/fields/tnxInvoiceRef__c.field-meta.xml
<CustomField>
    <fullName>tnxInvoiceRef__c</fullName>
    <label>tnxInvoiceRef</label>
    <length>20</length>
    <type>Text</type>
</CustomField>