unpackaged/main/default/objects/CZ_WebHook__e/fields/tnxStatus__c.field-meta.xml
<CustomField>
    <fullName>tnxStatus__c</fullName>
    <label>tnxStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>