unpackaged/main/default/objects/CZ_WebHook__e/fields/tnxType__c.field-meta.xml
<CustomField>
    <fullName>tnxType__c</fullName>
    <label>tnxType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>